tests/diagnostics/logical_non_bool.kal
# Logical && / || require bool operands, not integers.
1 && 2;
